--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "agent-memory",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "MCP server providing structured memory backend for AI agents",
   "type": "module",
   "main": "dist/index.js",
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsx watch src/index.ts",
+    "dev:watch": "tsx watch src/index.ts",
     "start": "node dist/index.js",
     "test": "vitest",
     "test:run": "vitest run",
@@ -16,9 +17,16 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "lint": "eslint src --ext .ts",
+    "db:backup": "node -e \"const fs=require('fs');const path=require('path');const src='data/memory.db';const dest='data/backup-'+Date.now()+'.db';if(fs.existsSync(src)){fs.copyFileSync(src,dest);console.log('Backup created:',dest)}else{console.error('No database found')}\"",
+    "db:restore": "node -e \"const fs=require('fs');const args=process.argv.slice(2);if(!args[0]){console.error('Usage: npm run db:restore <backup-file>');process.exit(1)}if(fs.existsSync(args[0])){fs.copyFileSync(args[0],'data/memory.db');console.log('Database restored from',args[0])}else{console.error('Backup file not found:',args[0])}\"",
+    "lint": "eslint src tests --ext .ts",
+    "lint:fix": "eslint src tests --ext .ts --fix",
+    "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\" \"*.json\" \"*.md\"",
+    "format:check": "prettier --check \"src/**/*.ts\" \"tests/**/*.ts\" \"*.json\" \"*.md\"",
     "typecheck": "tsc --noEmit",
-    "ci:test": "npm run build && npm run lint && npm run typecheck && npm run test:run"
+    "clean": "rm -rf dist coverage .tsbuildinfo",
+    "validate": "npm run lint && npm run format:check && npm run typecheck && npm run test:run",
+    "ci:test": "npm run build && npm run lint && npm run format:check && npm run typecheck && npm run test:run"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
@@ -30,11 +38,17 @@
     "@types/better-sqlite3": "^7.6.12",
     "@types/node": "^22.10.0",
     "@types/uuid": "^10.0.0",
-    "@vitest/coverage-v8": "^2.1.9",
-    "drizzle-kit": "^0.30.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitest/coverage-v8": "^4.0.15",
+    "drizzle-kit": "^0.31.8",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5",
     "tsx": "^4.19.0",
     "typescript": "^5.7.0",
-    "vitest": "^2.1.0"
+    "vitest": "^4.0.15"
   },
   "engines": {
     "node": ">=20.0.0"
