--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,10 +6,7 @@
     "sourceType": "module",
     "project": "./tsconfig.json"
   },
-  "plugins": [
-    "@typescript-eslint",
-    "prettier"
-  ],
+  "plugins": ["@typescript-eslint", "prettier"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
@@ -18,29 +15,33 @@
   ],
   "rules": {
     "prettier/prettier": "error",
-    "@typescript-eslint/no-unused-vars": ["error", {
-      "argsIgnorePattern": "^_",
-      "varsIgnorePattern": "^_"
-    }],
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_"
+      }
+    ],
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/no-non-null-assertion": "warn",
-    "no-console": ["warn", {
-      "allow": ["warn", "error"]
-    }],
+    "no-console": [
+      "warn",
+      {
+        "allow": ["warn", "error"]
+      }
+    ],
     "prefer-const": "error",
     "no-var": "error",
     "eqeqeq": ["error", "always"],
-    "@typescript-eslint/consistent-type-imports": ["error", {
-      "prefer": "type-imports"
-    }]
+    "@typescript-eslint/consistent-type-imports": [
+      "error",
+      {
+        "prefer": "type-imports"
+      }
+    ]
   },
-  "ignorePatterns": [
-    "dist",
-    "node_modules",
-    "coverage",
-    "*.js",
-    "*.d.ts"
-  ]
+  "ignorePatterns": ["dist", "node_modules", "coverage", "*.js", "*.d.ts", "tests/**/*.ts"],
+  "overrides": []
 }
