--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "db:studio": "drizzle-kit studio",
     "db:backup": "node -e \"const fs=require('fs');const path=require('path');const src='data/memory.db';const dest='data/backup-'+Date.now()+'.db';if(fs.existsSync(src)){fs.copyFileSync(src,dest);console.log('Backup created:',dest)}else{console.error('No database found')}\"",
     "db:restore": "node -e \"const fs=require('fs');const args=process.argv.slice(2);if(!args[0]){console.error('Usage: npm run db:restore <backup-file>');process.exit(1)}if(fs.existsSync(args[0])){fs.copyFileSync(args[0],'data/memory.db');console.log('Database restored from',args[0])}else{console.error('Backup file not found:',args[0])}\"",
-    "lint": "eslint src tests --ext .ts",
-    "lint:fix": "eslint src tests --ext .ts --fix",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\" \"*.json\" \"*.md\"",
     "format:check": "prettier --check \"src/**/*.ts\" \"tests/**/*.ts\" \"*.json\" \"*.md\"",
     "typecheck": "tsc --noEmit",
