--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "agent-memory",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "MCP server providing structured memory backend for AI agents",
   "type": "module",
   "main": "dist/index.js",
@@ -29,9 +29,12 @@
     "ci:test": "npm run build && npm run lint && npm run format:check && npm run typecheck && npm run test:run"
   },
   "dependencies": {
+    "@lancedb/lancedb": "^0.14.0",
     "@modelcontextprotocol/sdk": "^1.0.0",
+    "@xenova/transformers": "^2.17.0",
     "better-sqlite3": "^11.6.0",
     "drizzle-orm": "^0.38.0",
+    "openai": "^4.67.0",
     "uuid": "^11.0.0"
   },
   "devDependencies": {
