--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "agent-memory",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "MCP server providing structured memory backend for AI agents",
   "type": "module",
   "main": "dist/index.js",
@@ -35,6 +35,8 @@
     "better-sqlite3": "^11.6.0",
     "drizzle-orm": "^0.38.0",
     "openai": "^4.67.0",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.3",
     "uuid": "^11.0.0"
   },
   "devDependencies": {
