chore: remove IDE and agent-generated folders from tracking
Remove from version control:
- .agent/rules/ - Auto-synced agent rules (10 files)
- .cursor/rules/ - Cursor IDE rules (9 files)
- .claude-flow/metrics/ - Performance metrics (1 file)
- .github/workflows/ - Locally managed CI/CD (1 file)

Update .gitignore:
- Add .cursor/ to IDE exclusions
- Add .github/workflows/ to exclusions

These directories contain locally-generated or IDE-specific files
that should not be tracked in version control.

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ data/vectors.lance/
 # IDE
 .vscode/
 .idea/
+.cursor/
 *.swp
 *.swo
 *~
@@ -48,4 +49,7 @@ coverage/
 .claude-flow/
 .swarm/
 .agent/
+
+# CI/CD (locally managed)
+.github/workflows/
 
