fix: set explicit Docker image name to avoid prefix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    image: agent-memory:latest
     container_name: agent-memory
     volumes:
       # Persist database and data
