--- a/package.json
+++ b/package.json
@@ -63,16 +63,19 @@
     "setup": "tsx scripts/setup.ts",
     "health": "tsx scripts/check-health.ts",
     "setup-hook": "tsx scripts/setup-hook.ts",
-    "verify-response": "tsx scripts/verify-response.ts"
+    "verify-response": "tsx scripts/verify-response.ts",
+    "docs:lint": "npm run docs:lint:md && npm run docs:lint:vale",
+    "docs:lint:md": "markdownlint-cli2",
+    "docs:lint:vale": "vale README.md QUICKSTART.md INSTALLATION.md IDE_SETUP_EXAMPLES.md docs/README.md docs/getting-started.md docs/api-reference.md docs/architecture.md docs/data-model.md docs/contributing.md docs/security.md docs/DOC_INVENTORY.md docs/MAINTENANCE.md docs/guides docs/reference"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.32.1",
     "@lancedb/lancedb": "^0.14.0",
     "@modelcontextprotocol/sdk": "^1.0.0",
     "@xenova/transformers": "^2.17.0",
     "better-sqlite3": "^11.6.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.38.0",
-    "@anthropic-ai/sdk": "^0.32.1",
     "fastify": "^5.2.1",
     "openai": "^4.67.0",
     "pino": "^10.1.0",
@@ -90,6 +93,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "markdownlint-cli2": "^0.20.0",
     "prettier": "^3.2.5",
     "tsx": "^4.19.0",
     "typescript": "^5.7.0",
