--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,14 @@ services:
       dockerfile: Dockerfile
     image: agent-memory:latest
     container_name: agent-memory
+    command: ["node", "dist/cli.js", "rest"]
+    ports:
+      - "8787:8787"
     volumes:
       # Bind mount to shared data directory
       # Override AGENT_MEMORY_DATA_DIR to use a different host location
-      - ${AGENT_MEMORY_DATA_DIR:-~/.agent-memory}:/data
+      # Note: "~" is not expanded by Docker Compose; prefer ${HOME}/... or set AGENT_MEMORY_DATA_DIR explicitly.
+      - ${AGENT_MEMORY_DATA_DIR:-${HOME}/.agent-memory}:/data
     # Load environment variables from .env file (for non-path settings)
     env_file:
       - .env
@@ -17,13 +21,13 @@ services:
       # The bind mount maps host's ~/.agent-memory to container's /data
       - AGENT_MEMORY_DB_PATH=/data/memory.db
       - AGENT_MEMORY_VECTOR_DB_PATH=/data/vectors.lance
+      # REST API
+      - AGENT_MEMORY_REST_ENABLED=true
+      - AGENT_MEMORY_REST_HOST=0.0.0.0
+      - AGENT_MEMORY_REST_PORT=8787
       # Logging (can be overridden in .env)
       - LOG_LEVEL=${LOG_LEVEL:-info}
       - AGENT_MEMORY_PERF=${AGENT_MEMORY_PERF:-0}
-
-      # MCP uses stdio - keep stdin open and allocate TTY
-    stdin_open: true
-    tty: true
 
     # Restart policy
     restart: unless-stopped
